CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "security" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
SET( PROJ_INCLUDES  "inc" )

FILE( GLOB_RECURSE PROJ_SOURCES src/*cpp )
FILE( GLOB_RECURSE PROJ_HEADERS inc/*.h )

PROJECT( ${PROJ_NAME} )
FIND_PACKAGE( OpenCV REQUIRED )
SET( PROJ_LIBRARIES ${OpenCV_LIBS} )
INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} ${PROJ_HEADERS} )
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
